# Job-Application-Insights

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  modal_app.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
data/synthetic/: demo.csv
docs/: week-1-lesson.md  week-2-lesson.md  week-3-lesson-results.md  week-3-lesson.md  week-4-lesson.md  week-4-results.md
evals/: golden_set.jsonl
scripts/: build_synthetic_demo.py  curate_golden_set.py  dump_golden_review.py  dump_retrieval_review.py  filter_acks.py
src/job_application_insights/: __init__.py  cli.py  config.py  generate.py
src/job_application_insights/agents/: __init__.py  backends.py  langgraph_orchestrator.py  orchestrator.py  router.py  tool_use.py
src/job_application_insights/api/: __init__.py  main.py
src/job_application_insights/evals/: __init__.py  golden_set.py  metrics.py  runner.py
src/job_application_insights/ingest/: __init__.py  chunk.py  embed.py  parse.py
src/job_application_insights/retrieval/: __init__.py  bm25.py  hybrid.py  parent_docs.py  qdrant_store.py  rerank.py  vector_store.py
src/job_application_insights/structured/: __init__.py  table.py  tools.py
tests/: test_api.py  test_backends_trimming.py  test_bm25.py  test_chunk.py  test_embed.py  test_generate.py  test_golden_set.py  test_hybrid.py  test_langgraph_orchestrator.py  test_metrics.py  test_orchestrator.py  test_parent_docs.py  test_parse.py  test_qdrant_store.py  test_rerank.py  test_router.py  test_runner.py  test_smoke.py  test_structured_table.py  test_structured_tools.py  test_tool_use.py  test_vector_store.py
