[project]
name = "job-application-insights"
version = "0.1.0"
description = "Hybrid retrieval system over heterogeneous email data — RAG + structured queries + agentic routing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alhasan Abdellatif" }]
keywords = ["rag", "llm", "retrieval", "hybrid-search", "langgraph", "qdrant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "langchain-text-splitters>=0.3",
    "pandas>=3.0.3",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]

[project.scripts]
jai = "job_application_insights.cli:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

# ─────────────────────────────── Ruff ───────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
    "C4",  # comprehensions
    "PIE", # misc improvements
    "PL",  # pylint subset
    "TID", # tidy imports
]
ignore = [
    "PLR0913", # too many arguments — common in API surfaces
    "PLR2004", # magic value comparisons — fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # asserts allowed in tests

[tool.ruff.format]
quote-style = "double"

# ─────────────────────────────── Mypy ───────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# Third-party libs without bundled type stubs — Pydantic boundary types
# handle correctness for downstream callers.
module = ["tiktoken", "langchain_text_splitters"]
ignore_missing_imports = true

# ─────────────────────────────── Pytest ──────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=job_application_insights",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.3.260530",
]
